--- a/frontend/src/pages/interactions/components/history/InteractionHistory.module.scss
+++ b/frontend/src/pages/interactions/components/history/InteractionHistory.module.scss
@@ -9,10 +9,6 @@
   margin-top: $spacing-xl;
 }
 
-.root {
-  padding: $spacing-l;
-}
-
 .blockItem {
   display: flex;
   align-items: center;
