--- a/frontend/src/pages/interactions/components/templates/InteractionTemplates.module.scss
+++ b/frontend/src/pages/interactions/components/templates/InteractionTemplates.module.scss
@@ -6,9 +6,6 @@
 
 .root {
   height: 100%;
-  padding: $spacing-l;
-  // Padding is present on focused template view.
-  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -50,7 +47,7 @@
     flex-direction: column;
     row-gap: $spacing-base;
     position: sticky;
-    padding: $spacing-base 0;
+    padding-top: $spacing-base;
     background: $gray-100;
     bottom: 0;
   }
